<resources>
    <string name="app_name">abl</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="resend_otp"><a href="#">DID NOT RECIEVE OTP - RESEND</a></string>
    <string name="dummy_txt">Biometric Verification successfully done.</string>
    <string name="OTP_number">03XX-XXXXXXX</string>
    <string name="OTP_heading">Verify OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="bio_verify">Biometric Verification</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="bio_verification">Biometric Verification</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="select_preferred_error">Please select your Preferred Account Type to continue</string>
    <string name="select_preferred_currency">Please select your Preferred Currency</string>
    <string name="extra">extra</string>
    <string name="otp_inst">Enter <b>OTP</b> received on your provided mobile number</string>
    <string name="otp_inst2">A One Time Password (OTP) has been sent at your mobile number (03XX-XXXXXXX)</string>
    <string name="OTP_question">Didn\'t receive OTP ?</string>
    <string name="remaining_time">Time Remaining</string>
    <string name="otp_des">Please enter the 6-digit verification code here:</string>
    <string name="otp_des2">Please enter to proceed further</string>
    <string name="otp_insta">Enter <b>OTP</b> received on your provided mobile number</string>
    <string name="please_grant_external_storage_permissions">In order to use this application, please grant External storage permission.</string>
    <string name="guidance_app_bar">User Demo</string>
    <string name="dialog_success_title">Fingers Successfully Scanned</string>
    <string name="dialog_success_message">Scanning Completed</string>
    <string name="guidance_instruction">Position your hand with fingers close to each other and adjust it in such a way that you can view all 4 fingers of the hand completely in the frame area, and stay still</string>
    <string name="faceoff_key">MjAxLDE3Myw5NCw3NSw0OSwyMzAsNjAsMjU0LDE0NSwyNCwxMTgsNzksMTM5LDY2LDIxNSw3OCw3OSwxMSwyMDksMjgsMTUxLDExNCwyMTUsMTQ5LDk3LDE3OCwyOCw4LDE3Miw2MywyMiwxNCwxOTUsMjQsNTIsMTEyLDkxLDE2LDE2OCwxNzEsMTkzLDExNywyNDMsMTQ2LDg5LDE3NiwyNTIsMTMzLDE2OSwyMjUsNDAsMjU0LDE2Miw2NCwxNTIsMTUwLDczLDUxLDUxLDE4NywxODEsOTksOTUsMTM2LDE3NywyNDUsNTYsNjcsMjEwLDE2NCwxMzEsMTksMTgzLDIyMiw3LDM0LDExLDY1LDEzNSwyMzgsMTY0LDE5NCw3MCw2OCwyMDMsNzYsMjEsMTM4LDcwLDIwOSwxMDMsMjQ1LDkzLDE5MCwyMzcsMTYxLDI1NCwzMSw5MCw0NSwxNDgsMTU5LDE2LDY5LDE1NSw2OCwxMDEsMjQ5LDExMSwxMTksNzQsMjE4LDU5LDEyOSwxMywyOCwyNiw3NSw5NiwzOSw4MSwxNjgsMTMzLDE0MSwyMzksNzksMSwyMTIsMTgsMTU4LDE3NCwyMiwyNTMsMjA5LDI0NCwyMTYsNzgsOTIsMTE4LDkwLDE1OSw1MCw3Nyw3MiwyNSwxODYsMTU3LDE4LDIxMCwxMTAsMTc2LDk3LDEzOSwxOTgsMjM4LDc1LDEsMjMyLDEwNSwzMCwxOTMsMjMwLDY0LDE2Niw0NiwzMCwyMTEsMjI1LDE0Nyw2MiwzNiwxNTEsMTM4LDE3NCwxODMsODksMjQ3LDc0LDIxMywxNTUsMjExLDEyLDIxOSw2NCwxOCwxMTIsMTcwLDk4LDIzNiwxODMsMTk0LDEyMiwyMjMsMTM0LDIyOCwyNTIsNDQsNDEsODYsMTc3LDE3LDEwMSwzMywyMTksMTQ2LDEwNCwyMjEsMzIsNzAsMTU1LDc5LDE4NSw5MywxMDMsMjE5LDE4NSwxNCwyMjQsMTIsMTI4LDExOCwxODQsMTkxLDc0LDIxNSwxMjcsMjMzLDk2LDIyMSw0Nyw2NSwyNTEsMzIsMTQ1LDIyMywxOTcsODcsNzksMTMxLDQ4LDQ1LDUxLDE0LDc0LDQ5LDczLDI0OCwxNzUsMTY2LDIzNCw2OSw3MiwxMDQsMTI5LDg3LDExNywxLDAsMSw=</string>
    <string name="cnic_placeholder">Enter your cnic</string>
    <string name="cnic_cap">CNIC</string>
    <string name="get_started">Let\'s get started</string>
    <string name="preferred_banking_method_prompt">Your Preferred Banking Mode</string>
    <string name="type_of_account_prompt">Please Select Type Of Account</string>
    <string name="mobile_num_inst">Make sure entered mobile number is registered against your CNIC</string>
    <string-array name="mobile_network">
        <item><font fgcolor="#7E7C7C">Select your mobile network</font></item>
        <item>Zong</item>
        <item>Ufone</item>
        <item>Jazz</item>
        <item>Telenor</item>
    </string-array>
    <string-array name="number_of_additional_applicant">
        <item><font fgcolor="#7E7C7C">Select number</font></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="TIN_unavailability_reason">
        <item><font fgcolor="#7E7C7C">Select Reason Unavailability</font></item>
        <item>Reason 1</item>
        <item>Reason 2</item>
        <item>Reason 3</item>
        <item>Reason 4</item>
        <item>Other</item>
    </string-array>
    <string-array name="branches">
        <item><font fgcolor="#7E7C7C">List of ABL Branches ...</font></item>
        <item>Shadman</item>
        <item>Mall Road</item>
        <item>Gulshan</item>
        <item>Fazlia Colony</item>
    </string-array>
    <string name="abl_branch_locations">Please Locate Or Select Your Preferred ABL Branch</string>
    <string name="preferred_account_prompt">Select Your Preferred Account</string>
    <string name="asaan_digital_account">Asaan Digital Account</string>
    <string name="asaan_digital_1">&#8226;Maximum credit balance limit PKR 1,000,000</string>
    <string name="asaan_digital_2">&#8226;Maximum Debit balance limit PKR 1,000,000</string>
    <string name="asaan_digital_3">&#8226;Currency PKR </string>
    <string name="asaan_remittance_digital_account">Asaan Remittance Digital Account</string>
    <string name="asaan_remittance_digital_1">&#8226;Maximum credit balance limit PKR 3,000,000</string>
    <string name="asaan_remittance_digital_2">&#8226;Fund transfer limit of PKR 500,000 per day</string>
    <string name="asaan_remittance_digital_3">&#8226;No commercial remittance</string>
    <string name="asaan_remittance_digital_4">&#8226;Currency PKR</string>
    <string name="asaan_remittance_digital_5">&#8226;Cash withdrawal limit PKR 500,000 per day</string>
    <string name="freelancer_digital_account">Freelancer Digital Account</string>
    <string name="asaan_digital_account_description">An everyday account for every pakistani.Allied assan account is tailored to cater the banking needs of unbanked people.</string>
    <string name="asaan_remittance_digital_account_description">Receive foreign remittances with complete peace of mind.</string>
    <string name="freelancer_digital_account_description">Allied freelancer Digital Account provides benefits of having a bank account while also making freelancing life easier by smoother transaction experience</string>
    <string name="live_photo"><a href="#"><font fgcolor="#015088">Live Photo</font></a></string>
    <string name="upload_signature_prompt"><a href="#"><font fgcolor="#015088">Upload Your Signature</font></a></string>
    <string name="upload_signature_inst">Please Take A Clear Photo Of Your Signature Drawn On A Clean White Paper</string>
    <string name="rescan_text"><a href="#"><font fgcolor="#015088">Rescan</font></a></string>
    <string name="city">City</string>
    <string-array name="applicant">
        <item><font fgcolor="#7E7C7C">1 Additional Applicant</font></item>
        <item>Applicant 1</item>
    </string-array>
    <string name="fatca_text">The Foreign Account Tax Compliance Act (FATCA), requires us to generally acquire information regarding foreign assets held by applicants.</string>
    <string name="cnic_instruction">&#8226; Government of Pakistan Issued CNIC/SNIC \n
&#8226; Original fullsize, unedited CNIC/SNIC \n
&#8226; Place CNIC/SNIC against a single coloured background \n
&#8226; Readable, well-lit, coloured images \n
&#8226; Scanning a photocopied CNIC/SNIC is not allowed \n
&#8226; CNIC/SNIC should not be edited or expired \n
    </string>
    <string name="residence_phone">Enter residence phone number</string>
    <string name="landline_number">Landline Number</string>
    <string name="landline_placeholder">0XXXXXXXXXX</string>
    <string name="email_placeholder">Please enter your email</string>
    <string name="email">Email</string>
    <string name="optional">(Optional)</string>
    <string name="father_name">Father/Husband Name</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="full_name_ext"> (As per NADRA Record)</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="live_chat">Allied Live Chat</string>
    <string name="remitter_dets">Remitter\'s Details</string>
    <string name="name_of_remitter">Name Of Remitter</string>
    <string name="additional_applicant_details_heading">Additional Applicant 1 Details</string>
    <string name="relationship_heading">Relationship</string>
    <string name="enter_relationship">Enter Relationship</string>
    <string name="next_of_kin_details">Next of Kin Details</string>
    <string name="name_kin">Name (Kin)</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="cnic">CNIC</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="cnic_hint">XXXXX-XXXXXXX-X</string>
    <string name="mobile_number_hint">03xx xxxxxxx</string>
    <string name="things_you_need">Things You Need</string>
    <string name="original_cnic">Original Cnic</string>
    <string name="picture_of_your_signature">Picture of your signature</string>
    <string name="proof_of_income">Proof of Income</string>
    <string name="proof_of_income_not_required_account"><![CDATA[(Not required for Asaan Digital Account, Asaan Digital Remittance Account & Freelancer Digital Account)]]></string>
    <string name="please_note">Please Note</string>
    <string name="ensure_mobile_registered_on_cnic">You need to ensure that mobile number is registered on your CNIC</string>
    <string name="inform_of_live_picture">Be informed that during the process your live picture will be taken</string>
    <string name="wish_to_open_joint_or_minor_account">If you wish to open Joint/Minor Account, details of joint/Minor applicant will be taken at the end of the process</string>
    <string name="customer_support_and_suggestions"><![CDATA["For Customer Support, Suggestions & Complaints "]]></string>
    <string name="contact_number">111-225-225</string>
    <string name="support_email">cm@abl.com</string>
    <string name="must_read">Must Read</string>
    <string name="must_read_1">
        <font fgcolor="#F9893B">&#8226;</font> In case of expired NADRA ID Document (CNIC/ SNIC), please upload original NADRA Token in place of Original ID Card. Please be informed that you shall update bank record with original renewed NADRA ID Card immediately on receipt but not later than ‘30’ days, otherwise, bank reserves the right to block operation in your account.\n
    </string>
    <string name="must_read_2">
        <font fgcolor="#F9893B">&#8226;</font> Bank will protect your personal details through strict information security controls, provided information will not be divulged
    </string>
    <string name="must_read_3">
        <font fgcolor="#F9893B">&#8226;</font> All fields are mandatory except mentioned otherwise
    </string>
    <string name="must_read_4">
        <font fgcolor="#F9893B">&#8226;</font> Please ensure you use camera enabled device during whole onboarding process. Your Photograph/ Video call session(s) may be recorded for bank use.
    </string>
    <string name="must_read_5">
        <font fgcolor="#F9893B">&#8226;</font> Recommended browsers: Chrome, Firefox, Safari and Microsoft Edge
    </string>
    <string name="quick_link">Quick Links</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="help_and_support">Help And Support</string>
    <string name="Sitemap">Sitemap</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="web_mail">Web Mail</string>
</resources>