<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_link"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <ImageView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_down_white"
            android:layout_marginStart="@dimen/_5sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_and_support"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sitemap"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/privacy_policy"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_mail"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginEnd="@dimen/_10sdp"/>
    </LinearLayout>
</LinearLayout>