<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/logo_toolbar"
        layout="@layout/layout_logo_toolbar"/>

    <include
        android:id="@+id/steps"
        layout="@layout/layout_steps"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_white"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_of_kin_details"
                    android:fontFamily="@font/worksans_semibold"
                    android:textColor="@color/heading_black"
                    android:textSize="@dimen/_12sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_kin"
                    android:fontFamily="@font/worksans_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangular_edit_text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/please_enter_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cnic"
                    android:fontFamily="@font/worksans_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangular_edit_text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/cnic_hint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileNumber"
                    android:fontFamily="@font/worksans_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangular_edit_text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/mobile_number_hint"/>

            </LinearLayout>

            <include
                android:id="@+id/btn_container"
                layout="@layout/layout_button_container"/>

            <include
                android:id="@+id/layout_chat"
                layout="@layout/layout_abl_chat_container"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>