<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/additional_applicant_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_semibold"
        android:textColor="@color/heading_black"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/additional_applicant_details_heading"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:id="@+id/relationship_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_semibold"
            android:textColor="@color/heading_black"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/relationship_heading"/>

        <EditText
            android:id="@+id/et_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/enter_relationship"/>
    </LinearLayout>
</LinearLayout>